# Dockernauts

./: README.md  compose.yaml  docker-compose.yaml  dockerfile.master  dockerfile.planet  pyproject.toml  start.bat  start.sh
docker/: dockerfile.master  dockerfile.planet
src/: config.py  main.py  master_station.py  planet.py
src/galaxy/: docker.py  master_station.py  planet.py
src/tui/: app.py  game_over_screen.py  game_screen.py  instructions.py  intructions.py  planet_claim_panel.py  planet_status.py  planet_upgrade_panel.py
src/tui/assets/: planet_templates.py
src/utils/: config.py  docker.py  logger.py  nats.py
static/screens/: galaxy.css  game_screen.css  instructions.css  title.css
test/scripts/: give_resources.py  nats_pub.py
