[tool.poetry]
name = "dockernauts"
version = "0.1.0"
description = "A docker based galaxy for you to explore"
authors = ["Evan Allender <evan.allender@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
textual = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
